welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: identifier expected but '(' found.
def (fonctiontest)(){
    ^SnakeBuggle:29: error: identifier expected but '(' found.
def (passerpent)(){
    ^